--- a/tex/main.tex
+++ b/tex/main.tex
@@ -94,9 +94,12 @@ Joint with: Sri Kailasa, Maria Ignacia Fierro Piccardo, Matthew Scroggs, Lorena 
 		$$
 		g(x, y) = \frac{1}{4\pi | x - y|}
 		$$
+		For Helmholtz equation:
+		$$
+		g(x, y) = \frac{e^{ik|x-y|}}{4\pi|x-y|}
+		$$
 	\end{minipage}
 	
-	\vspace{.5cm}
 	
 	{\color{red} Representation formula}
 	$$
@@ -238,6 +241,7 @@ Joint with: Sri Kailasa, Maria Ignacia Fierro Piccardo, Matthew Scroggs, Lorena 
 			\begin{minipage}{5cm}
 				\begin{itemize}
 					\item Kernel-Independent FMM library.
+					\item Developed by T. Wang \& L. Barba
 					\item Written in C++, Provides Python Interface.
 					\item Highly efficient at higher accuracies.
 				\end{itemize}
